# groundrail

./: .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml
docs/: 00_EXECUTIVE_SUMMARY.md  01_ARCHITECTURE_AND_LAYERS.md  02_CONTRACTS_AND_ARTIFACTS.md  03_AI_UNIT_ANALYSIS_AND_HUMAN_REVIEW.md  04_CODEATLAS_REUSE_PLAN.md  05_TOOLS_AND_COMMANDS.md  06_ROADMAP.md  07_RISKS_LIMITATIONS_CONCERNS.md  08_IMPLEMENTATION_HANDOFF.md  09_INDEPENDENT_ARCHITECTURE_REVIEW.md
src/groundrail/: __init__.py  __main__.py
src/groundrail/analyzer/: __init__.py  pipeline.py  prompt.py  runner.py  store.py  validator.py
src/groundrail/cli/: __init__.py  commands.py  layer_commands.py  main.py
src/groundrail/conductor/: __init__.py  agent.py  store.py  synthesize.py  workflows.py
src/groundrail/core/: __init__.py  envelope.py  errors.py  evidence.py  gaps.py  hashing.py  ids.py  secrets.py  store.py  timeutil.py  validation.py  vocab.py  workspace.py
src/groundrail/evaluation/: __init__.py  runner.py
src/groundrail/flow/: __init__.py  flows.py  graph.py  impact.py  semantics.py  traverse.py
src/groundrail/indexer/: __init__.py  changes.py  gitstate.py  opensearch.py  python_units.py  snapshot.py  ts_mask.py  typescript_units.py  unit_index.py
src/groundrail/knowledge/: __init__.py  store.py
src/groundrail/layers/: __init__.py  map.py
src/groundrail/review/: __init__.py  store.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_conductor.py  test_core.py  test_evals.py  test_flow.py  test_indexer.py  test_router.py  test_tui.py  test_typescript.py
(+11 files in other folders)
